--- a/src/Vista/Preg2.form
+++ b/src/Vista/Preg2.form
@@ -27,7 +27,7 @@
               <Group type="103" groupAlignment="0" attributes="0">
                   <Group type="102" alignment="0" attributes="0">
                       <EmptySpace max="-2" attributes="0"/>
-                      <Component id="CatLabel" min="-2" max="-2" attributes="0"/>
+                      <Component id="CatLabel1" min="-2" max="-2" attributes="0"/>
                   </Group>
                   <Group type="102" alignment="0" attributes="0">
                       <EmptySpace max="-2" attributes="0"/>
@@ -73,7 +73,7 @@
       <Group type="103" groupAlignment="0" attributes="0">
           <Group type="102" alignment="0" attributes="0">
               <EmptySpace min="-2" pref="40" max="-2" attributes="0"/>
-              <Component id="CatLabel" min="-2" max="-2" attributes="0"/>
+              <Component id="CatLabel1" min="-2" max="-2" attributes="0"/>
               <EmptySpace max="-2" attributes="0"/>
               <Component id="PregLabel3" min="-2" pref="103" max="-2" attributes="0"/>
               <EmptySpace max="-2" attributes="0"/>
@@ -105,7 +105,7 @@
         <Property name="text" type="java.lang.String" value="PREGUNTA........"/>
       </Properties>
     </Component>
-    <Component class="javax.swing.JLabel" name="CatLabel">
+    <Component class="javax.swing.JLabel" name="CatLabel1">
       <Properties>
         <Property name="text" type="java.lang.String" value="CATEGORIA : 1"/>
       </Properties>
