--- a/src/Vista/Preg2.form
+++ b/src/Vista/Preg2.form
@@ -45,17 +45,13 @@
                               <EmptySpace min="-2" pref="26" max="-2" attributes="0"/>
                               <Component id="SellectComboBox1" min="-2" max="-2" attributes="0"/>
                           </Group>
-                          <Group type="103" groupAlignment="0" max="-2" attributes="0">
+                          <Group type="103" groupAlignment="0" attributes="0">
                               <Group type="102" alignment="0" attributes="0">
                                   <Component id="ALabel1" min="-2" pref="163" max="-2" attributes="0"/>
                                   <EmptySpace type="unrelated" max="-2" attributes="0"/>
                                   <Component id="BLabel1" min="-2" pref="174" max="-2" attributes="0"/>
                               </Group>
-                              <Group type="102" alignment="0" attributes="0">
-                                  <Component id="CLabel1" min="-2" pref="163" max="-2" attributes="0"/>
-                                  <EmptySpace type="unrelated" max="-2" attributes="0"/>
-                                  <Component id="DLabel1" max="32767" attributes="0"/>
-                              </Group>
+                              <Component id="CLabel1" alignment="0" min="-2" pref="163" max="-2" attributes="0"/>
                           </Group>
                       </Group>
                   </Group>
@@ -84,10 +80,7 @@
                   <Component id="ALabel1" alignment="0" min="-2" pref="27" max="-2" attributes="0"/>
               </Group>
               <EmptySpace type="unrelated" max="-2" attributes="0"/>
-              <Group type="103" groupAlignment="3" attributes="0">
-                  <Component id="CLabel1" alignment="3" min="-2" pref="28" max="-2" attributes="0"/>
-                  <Component id="DLabel1" alignment="3" min="-2" pref="28" max="-2" attributes="0"/>
-              </Group>
+              <Component id="CLabel1" min="-2" pref="28" max="-2" attributes="0"/>
               <EmptySpace max="32767" attributes="0"/>
               <Group type="103" groupAlignment="3" attributes="0">
                   <Component id="NextButton1" alignment="3" min="-2" max="-2" attributes="0"/>
@@ -102,7 +95,7 @@
   <SubComponents>
     <Component class="javax.swing.JLabel" name="PregLabel3">
       <Properties>
-        <Property name="text" type="java.lang.String" value="PREGUNTA........"/>
+        <Property name="text" type="java.lang.String" value="C&#xf3;mo se llama el tri&#xe1;ngulo que tiene tres lados iguales."/>
       </Properties>
     </Component>
     <Component class="javax.swing.JLabel" name="CatLabel1">
@@ -117,28 +110,26 @@
     </Component>
     <Component class="javax.swing.JLabel" name="ALabel1">
       <Properties>
-        <Property name="text" type="java.lang.String" value="A."/>
+        <Property name="text" type="java.lang.String" value="A. Escaleno"/>
       </Properties>
     </Component>
     <Component class="javax.swing.JLabel" name="BLabel1">
       <Properties>
-        <Property name="text" type="java.lang.String" value="B."/>
+        <Property name="text" type="java.lang.String" value="B.Equilatero"/>
       </Properties>
     </Component>
     <Component class="javax.swing.JLabel" name="CLabel1">
       <Properties>
-        <Property name="text" type="java.lang.String" value="C."/>
-      </Properties>
-    </Component>
-    <Component class="javax.swing.JLabel" name="DLabel1">
-      <Properties>
-        <Property name="text" type="java.lang.String" value="D."/>
+        <Property name="text" type="java.lang.String" value="C. Isosceles"/>
       </Properties>
     </Component>
     <Component class="javax.swing.JButton" name="NextButton1">
       <Properties>
         <Property name="text" type="java.lang.String" value="SIGUIENTE"/>
       </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="NextButton1ActionPerformed"/>
+      </Events>
     </Component>
     <Component class="javax.swing.JLabel" name="SellectLabel">
       <Properties>
