--- a/src/Vista/CnfigGame.form
+++ b/src/Vista/CnfigGame.form
@@ -169,6 +169,9 @@
         </Property>
         <Property name="text" type="java.lang.String" value="ATRAS"/>
       </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="BackButton2ActionPerformed"/>
+      </Events>
     </Component>
   </SubComponents>
 </Form>
