--- a/src/Vista/Preg1.form
+++ b/src/Vista/Preg1.form
@@ -49,17 +49,13 @@
                               <EmptySpace min="-2" pref="26" max="-2" attributes="0"/>
                               <Component id="SellectComboBox" min="-2" max="-2" attributes="0"/>
                           </Group>
-                          <Group type="103" groupAlignment="0" max="-2" attributes="0">
+                          <Group type="103" groupAlignment="0" attributes="0">
                               <Group type="102" alignment="0" attributes="0">
                                   <Component id="ALabel" min="-2" pref="163" max="-2" attributes="0"/>
                                   <EmptySpace type="unrelated" max="-2" attributes="0"/>
                                   <Component id="BLabel" min="-2" pref="174" max="-2" attributes="0"/>
                               </Group>
-                              <Group type="102" alignment="0" attributes="0">
-                                  <Component id="CLabel" min="-2" pref="163" max="-2" attributes="0"/>
-                                  <EmptySpace type="unrelated" max="-2" attributes="0"/>
-                                  <Component id="DLabel" max="32767" attributes="0"/>
-                              </Group>
+                              <Component id="CLabel" alignment="0" min="-2" pref="163" max="-2" attributes="0"/>
                           </Group>
                       </Group>
                   </Group>
@@ -90,10 +86,7 @@
                   <Component id="ALabel" min="-2" pref="27" max="-2" attributes="0"/>
               </Group>
               <EmptySpace type="unrelated" max="-2" attributes="0"/>
-              <Group type="103" groupAlignment="3" attributes="0">
-                  <Component id="CLabel" alignment="3" min="-2" pref="28" max="-2" attributes="0"/>
-                  <Component id="DLabel" alignment="3" min="-2" pref="28" max="-2" attributes="0"/>
-              </Group>
+              <Component id="CLabel" min="-2" pref="28" max="-2" attributes="0"/>
               <EmptySpace max="32767" attributes="0"/>
               <Group type="103" groupAlignment="0" attributes="0">
                   <Group type="103" alignment="0" groupAlignment="3" attributes="0">
@@ -118,7 +111,7 @@
     </Component>
     <Component class="javax.swing.JLabel" name="PregLabel2">
       <Properties>
-        <Property name="text" type="java.lang.String" value="PREGUNTA........"/>
+        <Property name="text" type="java.lang.String" value="&#xbf;Qui&#xe9;n gan&#xf3; el &#xfa;ltimo Nobel de Matem&#xe1;ticas?"/>
       </Properties>
     </Component>
     <Component class="javax.swing.JLabel" name="CatLabel1">
@@ -133,28 +126,26 @@
     </Component>
     <Component class="javax.swing.JLabel" name="ALabel">
       <Properties>
-        <Property name="text" type="java.lang.String" value="A."/>
+        <Property name="text" type="java.lang.String" value="A. Alessio"/>
       </Properties>
     </Component>
     <Component class="javax.swing.JLabel" name="BLabel">
       <Properties>
-        <Property name="text" type="java.lang.String" value="B."/>
+        <Property name="text" type="java.lang.String" value="B.No existe"/>
       </Properties>
     </Component>
     <Component class="javax.swing.JLabel" name="CLabel">
       <Properties>
-        <Property name="text" type="java.lang.String" value="C."/>
-      </Properties>
-    </Component>
-    <Component class="javax.swing.JLabel" name="DLabel">
-      <Properties>
-        <Property name="text" type="java.lang.String" value="D."/>
+        <Property name="text" type="java.lang.String" value="C. Peter"/>
       </Properties>
     </Component>
     <Component class="javax.swing.JButton" name="NextButton">
       <Properties>
         <Property name="text" type="java.lang.String" value="SIGUIENTE"/>
       </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="NextButtonActionPerformed"/>
+      </Events>
     </Component>
     <Component class="javax.swing.JLabel" name="SellectLabel">
       <Properties>
