--- a/src/Vista/Preg4.form
+++ b/src/Vista/Preg4.form
@@ -45,17 +45,13 @@
                               <EmptySpace min="-2" pref="26" max="-2" attributes="0"/>
                               <Component id="SellectComboBox3" min="-2" max="-2" attributes="0"/>
                           </Group>
-                          <Group type="103" alignment="0" groupAlignment="0" max="-2" attributes="0">
+                          <Group type="103" alignment="0" groupAlignment="0" attributes="0">
                               <Group type="102" alignment="0" attributes="0">
                                   <Component id="ALabel3" min="-2" pref="163" max="-2" attributes="0"/>
                                   <EmptySpace type="unrelated" max="-2" attributes="0"/>
                                   <Component id="BLabel3" min="-2" pref="174" max="-2" attributes="0"/>
                               </Group>
-                              <Group type="102" alignment="0" attributes="0">
-                                  <Component id="CLabel3" min="-2" pref="163" max="-2" attributes="0"/>
-                                  <EmptySpace type="unrelated" max="-2" attributes="0"/>
-                                  <Component id="DLabel3" max="32767" attributes="0"/>
-                              </Group>
+                              <Component id="CLabel3" alignment="0" min="-2" pref="163" max="-2" attributes="0"/>
                           </Group>
                       </Group>
                   </Group>
@@ -84,10 +80,7 @@
                   <Component id="ALabel3" alignment="0" min="-2" pref="27" max="-2" attributes="0"/>
               </Group>
               <EmptySpace type="unrelated" max="-2" attributes="0"/>
-              <Group type="103" groupAlignment="3" attributes="0">
-                  <Component id="CLabel3" alignment="3" min="-2" pref="28" max="-2" attributes="0"/>
-                  <Component id="DLabel3" alignment="3" min="-2" pref="28" max="-2" attributes="0"/>
-              </Group>
+              <Component id="CLabel3" min="-2" pref="28" max="-2" attributes="0"/>
               <EmptySpace max="32767" attributes="0"/>
               <Group type="103" groupAlignment="3" attributes="0">
                   <Component id="NextButton3" alignment="3" min="-2" max="-2" attributes="0"/>
@@ -100,15 +93,13 @@
     </DimensionLayout>
   </Layout>
   <SubComponents>
-    <Component class="javax.swing.JLabel" name="DLabel3">
-      <Properties>
-        <Property name="text" type="java.lang.String" value="D."/>
-      </Properties>
-    </Component>
     <Component class="javax.swing.JButton" name="NextButton3">
       <Properties>
         <Property name="text" type="java.lang.String" value="SIGUIENTE"/>
       </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="NextButton3ActionPerformed"/>
+      </Events>
     </Component>
     <Component class="javax.swing.JLabel" name="SellectLabel">
       <Properties>
@@ -135,7 +126,7 @@
     </Component>
     <Component class="javax.swing.JLabel" name="PregLabel5">
       <Properties>
-        <Property name="text" type="java.lang.String" value="PREGUNTA........"/>
+        <Property name="text" type="java.lang.String" value="C&#xf3;mo se llaman los animales que solo comen vegetales y plantas."/>
       </Properties>
     </Component>
     <Component class="javax.swing.JLabel" name="CatLabel1">
@@ -150,17 +141,17 @@
     </Component>
     <Component class="javax.swing.JLabel" name="ALabel3">
       <Properties>
-        <Property name="text" type="java.lang.String" value="A."/>
+        <Property name="text" type="java.lang.String" value="A. Omnivoros"/>
       </Properties>
     </Component>
     <Component class="javax.swing.JLabel" name="BLabel3">
       <Properties>
-        <Property name="text" type="java.lang.String" value="B."/>
+        <Property name="text" type="java.lang.String" value="B. Herbivoros"/>
       </Properties>
     </Component>
     <Component class="javax.swing.JLabel" name="CLabel3">
       <Properties>
-        <Property name="text" type="java.lang.String" value="C."/>
+        <Property name="text" type="java.lang.String" value="C. Carnivoros"/>
       </Properties>
     </Component>
   </SubComponents>
