--- a/src/Vista/Preg5.form
+++ b/src/Vista/Preg5.form
@@ -45,17 +45,13 @@
                               <EmptySpace min="-2" pref="26" max="-2" attributes="0"/>
                               <Component id="SellectComboBox4" min="-2" max="-2" attributes="0"/>
                           </Group>
-                          <Group type="103" alignment="0" groupAlignment="0" max="-2" attributes="0">
+                          <Group type="103" alignment="0" groupAlignment="0" attributes="0">
                               <Group type="102" alignment="0" attributes="0">
                                   <Component id="ALabel4" min="-2" pref="163" max="-2" attributes="0"/>
                                   <EmptySpace type="unrelated" max="-2" attributes="0"/>
                                   <Component id="BLabel4" min="-2" pref="174" max="-2" attributes="0"/>
                               </Group>
-                              <Group type="102" alignment="0" attributes="0">
-                                  <Component id="CLabel4" min="-2" pref="163" max="-2" attributes="0"/>
-                                  <EmptySpace type="unrelated" max="-2" attributes="0"/>
-                                  <Component id="DLabel4" max="32767" attributes="0"/>
-                              </Group>
+                              <Component id="CLabel4" alignment="0" min="-2" pref="163" max="-2" attributes="0"/>
                           </Group>
                       </Group>
                   </Group>
@@ -84,10 +80,7 @@
                   <Component id="ALabel4" alignment="0" min="-2" pref="27" max="-2" attributes="0"/>
               </Group>
               <EmptySpace type="unrelated" max="-2" attributes="0"/>
-              <Group type="103" groupAlignment="3" attributes="0">
-                  <Component id="CLabel4" alignment="3" min="-2" pref="28" max="-2" attributes="0"/>
-                  <Component id="DLabel4" alignment="3" min="-2" pref="28" max="-2" attributes="0"/>
-              </Group>
+              <Component id="CLabel4" min="-2" pref="28" max="-2" attributes="0"/>
               <EmptySpace max="32767" attributes="0"/>
               <Group type="103" groupAlignment="3" attributes="0">
                   <Component id="NextButton4" alignment="3" min="-2" max="-2" attributes="0"/>
@@ -102,28 +95,26 @@
   <SubComponents>
     <Component class="javax.swing.JLabel" name="ALabel4">
       <Properties>
-        <Property name="text" type="java.lang.String" value="A."/>
+        <Property name="text" type="java.lang.String" value="A. Euler"/>
       </Properties>
     </Component>
     <Component class="javax.swing.JLabel" name="BLabel4">
       <Properties>
-        <Property name="text" type="java.lang.String" value="B."/>
+        <Property name="text" type="java.lang.String" value="B. Fermat"/>
       </Properties>
     </Component>
     <Component class="javax.swing.JLabel" name="CLabel4">
       <Properties>
-        <Property name="text" type="java.lang.String" value="C."/>
-      </Properties>
-    </Component>
-    <Component class="javax.swing.JLabel" name="DLabel4">
-      <Properties>
-        <Property name="text" type="java.lang.String" value="D."/>
+        <Property name="text" type="java.lang.String" value="C. Fourier"/>
       </Properties>
     </Component>
     <Component class="javax.swing.JButton" name="NextButton4">
       <Properties>
         <Property name="text" type="java.lang.String" value="SIGUIENTE"/>
       </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="NextButton4ActionPerformed"/>
+      </Events>
     </Component>
     <Component class="javax.swing.JLabel" name="SellectLabel">
       <Properties>
@@ -150,12 +141,12 @@
     </Component>
     <Component class="javax.swing.JLabel" name="PregLabel6">
       <Properties>
-        <Property name="text" type="java.lang.String" value="PREGUNTA........"/>
+        <Property name="text" type="java.lang.String" value="El matem&#xe1;tico m&#xe1;s importante del siglo XVIII fue..."/>
       </Properties>
     </Component>
     <Component class="javax.swing.JLabel" name="CatLabel1">
       <Properties>
-        <Property name="text" type="java.lang.String" value="CATEGORIA : 1"/>
+        <Property name="text" type="java.lang.String" value="CATEGORIA : 5"/>
       </Properties>
     </Component>
     <Component class="javax.swing.JLabel" name="RespLabel">
